# UFRJ-Laboratorios

./: .gitignore  README.md  index.html
Aprendizado de Máquina 2023.02/: Tarefa 1.ipynb
Aprendizado de Máquina 2023.02/Tarefa 2/: Tarefa 2.ipynb
Aprendizado de Máquina 2023.02/Tarefa 3/: MyLinearRegression.ipynb  MyLinearRegression1.py  MyLinearRegression2.py  item_1_ao_4.ipynb  item_5.ipynb  item_6.ipynb  item_8.ipynb  readme.md
Aprendizado de Máquina 2023.02/Tarefa 5/: relatorio.odt  tarefa.ipynb
COMP 1/: LICENSE  README.md  package.json
COMP 1/exercicio-1/: exercicio-1.c
COMP 1/exercicios-uri/: area-do-circulo.c  busca-por-ddd.c  conversao-tempo.c  media-de-2-numeros.c  produto-simples.c  salario.c
COMP 1/prova-1/: prova-1-q1.c  prova-1-q4.c
COMP 1/prova-2/: lista-de-pessoas.c  lista-encadeada.c
COMP 1/trabalho-final/: defs.h  globais.c  globais.h  pseucodigo.md  readme.md
Comp2_2020_2_LAB/: .gitignore  LICENSE  README.md
Comp2_2020_2_LAB/Comp2_2020_2_LAB1/: README.md
Comp2_2020_2_LAB/Comp2_2020_2_LAB5/: README.md
Comp2_2020_2_LAB/Comp2_2020_2_LAB8/: readme.md
Comp3/Lab-1-Pilha-Int/: main.cpp  readme.md
Comp3/Lab-10-objeto-tipo-variavel/: Var.cpp  main.cpp  readme.md
Comp3/Lab-11-derivador-simbolico/: derivador.cpp  main.cpp  readme.md
Comp3/Lab-12-expressoes-lambdas-simplificadas/: lambda.cpp  main.cpp
Comp3/Lab-13-bind/: bind.cpp  main.cpp
Comp3/Lab-14-obj-variavel-array/: main.cpp  obj-variavel-arrays.cpp
Comp3/Lab-15-derivador-simbolico-parte-2/: derivador.cpp  main.cpp
Comp3/Lab-16-expressoes-lambdas-complicadas/: expressoes-lambdas-complicadas.cpp
Comp3/Lab-18-otimizador-expressoes-matrizes/: main.cpp  otimizador.cpp
Comp3/Lab-19-derivador-simbolico-parte-3/: derivador.cpp  main.cpp
Comp3/Lab-2-Pilha-Int-Alocacao-Dinamica/: main.cpp
Comp3/Lab-3-print-lista-tuplas/: readme.md
Comp3/Lab-4-pilha-usando-vector/: main.cpp  readme.md
Comp3/Lab-5-funcao-apply/: apply.cpp  main.cpp
Comp3/Lab-6-vetor-geometrico/: README.md  Vetor.cpp  main.cpp
Comp3/Lab-8-lista-tuplas-teste-destrutor/: main.cpp  tuplas.cpp
Comp3/Lab-9-tarefa-filter/: README.md  filter.cpp  main.cpp
Comp3/Lab7-tarefa-stream/: README.md  main.cpp  stream.cpp
Comp3/print-lista-tuplas/: main.cpp
Computação Científica e Análise de Dados/: Decomposição LU.ipynb  LU e QR.ipynb  Matriz LU.ipynb  QR-COCADA23-1.ipynb  Trabalho 1 - COCADA.ipynb
Projeto final Algebra Linear - 2022-02/: Warp Perspective.ipynb
comp1-2020-01/: README.md
comp2-2020-02/: README.md
comp3-2021-01/: README.md
compiladores-2025-01/: .gitignore  README.md
computacao-cientifica-edos-2025-01/: aplicacao-metodos-adams-bashforth.ipynb  aplicacao-metodos-runge-kutta-em-edos.ipynb  metodos-runge-kutta.ipynb
estrutura-de-dados-2021-01/: README.md
programaca-concorrente-2024-01/trabalho-final/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  ui_MainWindow.h
programaca-concorrente-2024-01/trabalho-final/headers/: MainWindow.h
programaca-concorrente-2024-01/trabalho-final/src/: MainWindow.cpp  main.cpp
programacao-concorrente-2024-01/trabalho-final/: CMakeLists.txt  readme.md  relatorio-windows.ods
programacao-concorrente-2024-01/trabalho-final/forms/: Application.ui  MainWindow.ui  SolverPage.ui  WelcomePage.ui  ui_Application.h  ui_MainWindow.h  ui_SolverPage.h  ui_WelcomePage.h
programacao-concorrente-2024-01/trabalho-final/headers/: Application.h  MainWindow.h  SolverPage.h  WelcomePage.h
programacao-concorrente-2024-01/trabalho-final/src/: Application.cpp  MainWindow.cpp  SolverPage.cpp  WelcomePage.cpp  main.cpp
seginfo-2025-02/: SegInfo Atividade1.ipynb
visao-computacional-2025-01/: visao-computacional-lista1.ipynb  visao-computacional-lista2.ipynb  visao-computacional-lista3.ipynb  visao-computacional-lista4.ipynb
(+351 files in other folders)
